UPDATE : accounts css수정

--- a/accounts/static/css/dogsignup.css
+++ b/accounts/static/css/dogsignup.css
@@ -2,26 +2,6 @@
   font-family: 'Jua', sans-serif;
 }
 
-.btnOrange {
-  background: #E3B57E;
-}
-.btnFade.btnOrange:hover {
-  background: rgb(185, 113, 25);
-}
-
-.btnOrange:hover {
-  background: #e79026;
-}
-.btnOrange.btnPush {
-  box-shadow: 0px 5px 0px 0px #A66615;
-  width: 130px;
-  font-size:small;
-}
-
-.btnOrange.btnPush:hover {
-  box-shadow: 0px 0px 0px 0px #A66615;
-}
-
 /*Keyframes*/
 @keyframes rain_effect {
   0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
@@ -49,13 +29,40 @@
   
 
 body {
-  background-image: url('../images/배경2.jpg');
+  background-image: url('../images/배경.jpg'), url('../images/배경.jpg'), url('../images/배경.jpg');
 	animation: rain_effect 40s linear infinite;
 	-webkit-animation: rain_effect 40s linear infinite;
 	-moz-animation: rain_effect 40s linear infinite;
 	-ms-animation: rain_effect 40s linear infinite; 
 }
 
-.card {
-  height:700px;
+
+.card-css{
+  background-color:#e6e0db;
+  padding: 20px;
+  font-size: 15px;
+  font-weight: bold;
+  text-align: center;
 }
+
+/* 버튼 css*/
+.btnOrange {
+  background: #E3B57E;
+}
+.btnFade.btnOrange:hover {
+  background: rgb(185, 113, 25);
+}
+
+.btnOrange:hover {
+  background: #e79026;
+}
+.btnOrange.btnPush {
+  box-shadow: 0px 5px 0px 0px #A66615;
+  width: 130px;
+  font-size:small;
+}
+
+.btnOrange.btnPush:hover {
+  box-shadow: 0px 0px 0px 0px #A66615;
+}
+
