--- a/accounts/templates/accounts/password.html
+++ b/accounts/templates/accounts/password.html
@@ -1,18 +1,21 @@
-{% extends 'base.html' %} {% load django_bootstrap5 %} {% load static %} {%
-block content %}
-<div class="password">
-  <form action="" method="POST" class="password-form">
-    {% csrf_token %} {% bootstrap_form form %}
-    <div class="buttons">
-      <button type="submit" class="update-button">수정</button>
-      <button
-        type="button"
-        class="back-button"
-        onclick="location.href='{% url 'accounts:update' %}' "
-      >
-        취소
-      </button>
-    </div>
-  </form>
-</div>
+{% extends 'base.html' %}
+{% load django_bootstrap5 %}
+{% load static %}
+{% block css %}
+<link rel="stylesheet" href="{% static 'css/password.css' %}" />
+<script src="https://kit.fontawesome.com/dcba51bc42.js" crossorigin="anonymous"></script>
+<link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
+{% endblock css %}
+
+{% block content %}
+  <div class="password">
+    
+    <form action="" method="POST" class="password-form container d-flex card mt-4 mb-5 w-50 row">
+      {% csrf_token %}
+      {% bootstrap_form form %}
+        <button type="button" class="btn button btnPush btnOrange m-3 mb-3 w-25" title="Button push orange" onclick="location.href='{% url 'accounts:profile' user.username %}' "> 수정</button>
+        <button type="button" class="btn button btnPush btnOrange m-3 w-25"  title="Button push orange" onclick="location.href='{% url 'accounts:profile' user.username %}' ">취소</button>
+      </div>
+    </form>
+  </div>
 {% endblock content %}
