--- a/accounts/static/css/profile.css
+++ b/accounts/static/css/profile.css
@@ -1,23 +1,88 @@
-body{
-  background-color:#e6e0db;
+* {
+  font-family: 'Jua', sans-serif;
 }
 
-.google-font{
-  font-family: 'Rubik', sans-serif;
+/*Keyframes*/
+@keyframes rain_effect {
+0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
+50% {background-position: 400px 800px, 300px 300px, 200px 200px; background-color: #FF69B4}
+100% {background-position: 0px 0px, 0px 0px, 0px 0px; background-color: #F8C8DC}
+}
+
+@-moz-keyframes rain_effect {
+0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
+50% {background-position: 400px 800px, 300px 300px, 200px 200px; background-color: #FF69B4}
+100% {background-position: 0px 0px, 0px 0px, 0px 0px; background-color: #F8C8DC}
+}
+
+@-webkit-keyframes rain_effect {
+0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
+50% {background-position: 400px 800px, 300px 300px, 200px 200px; background-color: #FF69B4}
+100% {background-position: 0px 0px, 0px 0px, 0px 0px; background-color: #F8C8DC}
+}
+
+@-ms-keyframes rain_effect {
+0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
+50% {background-position: 400px 800px, 300px 300px, 200px 200px; background-color: #FF69B4}
+100% {background-position: 0px 0px, 0px 0px, 0px 0px; background-color: #F8C8DC}
+}
+
+
+
+.my_text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+    justify-content: center;
+    color: #fff;
+}
+
+.my_text h1{
+	font-size: 5em;
+}
+
+.my_text p{
+	font-size: 3em;
+}
+
+
+body {
+	background-color: #d9bd9b; 
+}
+
+.top{
+  height:400px; 
+  display: table-cell;
+  vertical-align: middle;
+  width:100%;
+  text-align: center;
+  display: inline-block;
+  background-image: url('../images/배경.jpg'), url('../images/배경.jpg'), url('../images/배경.jpg');
+	animation: rain_effect 40s linear infinite;
+	-webkit-animation: rain_effect 40s linear infinite;
+	-moz-animation: rain_effect 40s linear infinite;
+	-ms-animation: rain_effect 40s linear infinite; 
+
+}
+.top-card {
+  align-items: center;
+  margin-top:30px;
+  margin-bottom: 30px;
+  width:90%;
 }
 
 .username{
     display: flex!important;
     align-content: center;
-    flex-wrap: wrap;
 
 }
 /* 팔로우 css*/
 .follow {
-  margin-right: 2.5rem;
     display: flex!important;
     align-content: stretch;
     align-items: center;
+    justify-content: space-between;
 }
 
 .follow-button {
@@ -51,8 +116,10 @@ body{
   margin: 2px;
   overflow: hidden;
 }
-.nav-link{
-  color :rgb(185, 113, 25)
+/*tab 글씨 색깔*/
+.tab-font{
+  color :rgb(38, 26, 12);
+
 }
 
 /* MY 강아지 > 강아지 정보수정,프로필 카드*/
@@ -90,30 +157,41 @@ body{
 }
 .btnOrange.btnPush {
   box-shadow: 0px 5px 0px 0px #A66615;
-  width: 130px;
+  width: 135px;
   font-size:small;
+  font-family: 'Jua', sans-serif;
 }
 
 .btnOrange.btnPush:hover {
   box-shadow: 0px 0px 0px 0px #A66615;
 }
 
-.card {
-  /* if not hovered : dark */
+.cardcss {
   filter: brightness(90%);
   transition: 
     transform .4s,
     filter .4s,
     z-index .2s;
     
+    
 }
 
-.card:hover{ 
+.cardcss:hover{ 
   filter: brightness(100%);
   box-shadow: 0 15px 20px 10px rgba(217, 215, 215, 0.974);
   z-index: 1;
 }
 
+.w-100 {
+  width: 100%!important;
+  height: 400px;
+  margin-bottom: 50px;
+  border-radius: 10px; 
+}
 
-
-=======
+/* my 작성글 탭 css*/
+.asd-tab{
+    display: flex!important;
+    /* align-content: center; */
+    flex-wrap: nowrap;
+}
