--- a/accounts/static/css/signup.css
+++ b/accounts/static/css/signup.css
@@ -1,5 +1,5 @@
 * {
-  font-family: 'Mochiy Pop P One', sans-serif;
+  font-family: 'Jua', sans-serif;
 }
 
 
@@ -35,38 +35,4 @@ body {
 	-webkit-animation: rain_effect 40s linear infinite;
 	-moz-animation: rain_effect 40s linear infinite;
 	-ms-animation: rain_effect 40s linear infinite; 
-}
-/* 버튼 css*/
-.btnOrange {
-  background: #E3B57E;
-}
-.btnFade.btnOrange:hover {
-  background: rgb(185, 113, 25);
-}
-
-.btnOrange:hover {
-  background: #e79026;
-}
-.btnOrange.btnPush {
-  box-shadow: 0px 5px 0px 0px #A66615;
-  width: 130px;
-  font-size:small;
-}
-
-.btnOrange.btnPush:hover {
-  box-shadow: 0px 0px 0px 0px #A66615;
-}
-
-/*카드 css*/
-.card-css{
-  display: flex;
-  justify-content: center;
-  height: 800px;
-  width: 60%;
-  margin: auto;
-  display: block;
-  max-width: 100%;
-  height: auto;
-  padding-bottom: 5%;
-  padding-top: 5%;
 }
