--- a/accounts/templates/accounts/dogupdate.html
+++ b/accounts/templates/accounts/dogupdate.html
@@ -2,11 +2,12 @@
 {% load django_bootstrap5 %}
 {% load static %}
 {% block css %}
-<link rel="stylesheet" href="{% static 'css/profile.css' %}">
+<link rel="stylesheet" href="{% static 'css/dogupdate.css' %}">
+<script src="https://kit.fontawesome.com/dcba51bc42.js" crossorigin="anonymous"></script>
+<link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
 {% endblock css %}
 {% block content %}
-
-<div class="personal-info m-3 ">
+<div class="m-3 ">
 {% if user.dog_set.all %}
 {% for dog in user.dog_set.all %}
   {% if dog.dogphoto %}
@@ -21,15 +22,15 @@
 {% endif %}
 
 </div>
-<div class="update">
-  <form action="" method="POST" enctype="multipart/form-data" class="update-form container">
+<div class= "container d-flex justify-content-center align-items-center card mt-5 mb-5 w-50">
+  <h2 class="mt-3">강아지 정보 수정</h2>
+  <form action="" method="POST" enctype="multipart/form-data" class="update-form container m-3 w-75">
     {% csrf_token %}
     {% bootstrap_form form %}
-    <a href="{% url 'accounts:dogdelete' dog.pk %}" class="btn button btnPush btnOrange m-3" title="Button push orange">강아지 등록 취소</a>
-    <div class="buttons">
-      <button type="submit" class="btn button btnPush btnOrange m-3" title="Button push orange">수정</button>
-      <button type="button" class="btn button btnPush btnOrange m-3" title="Button push orange"
-        onclick="location.href='{% url 'accounts:profile' user.username %}'">취소</button>
+    <div class="buttons text-center">
+      <button type="submit" class="btn button btnPush btnOrange m-3" title="Button push orange"><i class="fa-solid fa-check"> </i>수정</button>
+      <button type="button" class="btn button btnPush btnOrange m-3" title="Button push orange" onclick="location.href='{% url 'accounts:profile' user.username %}'"><i class="fa-solid fa-rotate-left"></i> 뒤로가기</button>
+      <button type="button" class="btn button btnPush btnOrange m-3" title="Button push orange" onclick="location.href='{% url 'accounts:dogdelete' dog.pk %}'"><i class="fa-solid fa-paw"></i> 등록 취소</button>
   </form>
 </div>
 </div>
