FIX : 일정관리 extends 변경

--- a/schedules/templates/schedules/calendar.html
+++ b/schedules/templates/schedules/calendar.html
@@ -1,17 +1,8 @@
-{% load django_bootstrap5 %}
+{% extends 'base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>네이멍</title>
-  <link rel="icon" href="{% static '/images/namung_logo.png' %}">
-  <!-- CSS only -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+{% block css %}
   <!-- 외부 CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  {% comment %} <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"> {% endcomment %}
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
   <!-- CSS -->
   <link rel="stylesheet" href="{% static 'css/main.css' %}">
@@ -21,57 +12,8 @@
       color: #C17F34;
   }
   </style>
-</head>
-<body>
-<!-- Navbar 1 -->
-<nav class="navbar-stretch navbar-expand-lg p-0 sticky-top navback">
-  <div class="d-flex flex-column px-5 py-2">
-    <ul class="navbar-nav me-0 mb-2 mb-lg-0 d-flex justify-content-between align-items-center">
-      <!-- 로고 -->
-      <div>
-        <a class="navbar-brand" href="{% url 'reviews:index' %}">
-          <img src="{% static 'images/namung_horizontalLogo.png' %}" alt="Logo" style="width: 11rem; height: 4rem;">
-        </a>
-      </div>
-      <!-- 토글러 -->
-      <div class="d-flex">
-          <li class="nav-item me-4 nav1-text">
-            <a class="nav-link" href="{% url 'reviews:index' %}">멍스타그램</a>
-          </li>
-          <li class="nav-item me-4 nav1-text">
-            <a class="nav-link" href="{% url 'schedules:calendar' %}">일정관리</a>
-          </li>
-          <li class="nav-item me-4 nav1-text">
-            <a class="nav-link" href="{% url 'walkings:index' %}">산책나가기</a>
-          </li>
-          <li class="nav-item me-4 nav1-text">
-            <a class="nav-link" href="{% url 'info:place' %}">애견동반장소</a>
-          </li>
-          <li class="nav-item me-4 nav1-text">
-            <a class="nav-link" href="{% url 'info:hospital' %}">병원찾기</a>
-          </li>
-          <li class="nav-item me-4 nav1-text">
-            <a class="nav-link" href="{% url 'info:deserted' %}">유기견보호소</a>
-          </li>
-          {% if request.user.is_authenticated %}
-          <li class="nav-item me-4 nav1-text">
-            <a class="nav-link" href="{% url 'accounts:index' %}">{{ request.user }}</a>
-          </li>
-          <li class="nav-item me-4 nav1-text">
-            <a class="nav-link" href="{% url 'accounts:logout' %}">로그아웃</a>
-          </li>
-        {% else %}
-          <li class="nav-item me-4 nav1-text">
-            <a class="nav-link" href="{% url 'accounts:login' %}">로그인</a>
-          </li>
-          <li class="nav-item me-4 nav1-text">
-            <a class="nav-link" href="{% url 'accounts:signup' %}">회원가입</a>
-          </li>
-        {% endif %}
-      </div>
-    </ul>
-  </div>
-</nav>
+{% endblock css %}
+{% block content %}
 <div>
   <div class="nav">
     <!-- sub navbar-->
@@ -162,16 +104,8 @@
   </div>
   </div>
 </div>
-<footer class="">
-  <div class="d-flex justify-content-end mb-4 me-4 fixed-bottom" style="z-index: 2;">
-    <button onclick="topFunction()" class="topBtn" title="Go to top">Top</button>
-  </div>
-  <nav class="navbar d-flex justify-content-center align-content-center opacity-75 fixed-bottom" style="background-color: #C17F34; height: 3rem; z-index: 1;">
-      <a class="text-decoration-none text-white" href="#">
-        🐕🐶 Supported by HyperGrowth 🐶🐕
-      </a>
-  </nav>
-</footer>
+{% endblock content %}
+{% block script %}
     <script type="text/javascript" src="/static/js/footer.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script>
@@ -297,5 +231,4 @@
         eventModal.style.display = 'none';
       });
     </script>
-  </body>
-</html>
+{% endblock script %}
