--- a/walkings/templates/walkings/test.html
+++ b/walkings/templates/walkings/test.html
@@ -96,11 +96,11 @@
   }
 getLocation()
 
-  const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value
+const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value
 //------------------------------------지도 기본 설정--------------------------------------------
 var mapContainer = document.getElementById('map'), // 지도를 표시할 div
   mapOption = {
-    center: new kakao.maps.LatLng(pos_latitude, pos_longtitude), // 지도의 중심좌표
+    center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
     level: 5 // 지도의 확대 레벨
   };
 
